# AI-English-Coach

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
backend/: __init__.py  main.py
backend/analysis/: __init__.py  gap_analyzer.py  learning_plan.py  progress_report.py
backend/api/: __init__.py  reports.py  users.py
backend/coldpath/: __init__.py  orchestrator.py
backend/coldpath/evaluators/: __init__.py  base.py  fluency.py  grammar.py  pronunciation.py
backend/coldpath/pronunciation/: __init__.py
backend/core/: __init__.py  event_bus.py  logging.py  metrics.py  model_manager.py  rate_limiter.py  resource_guard.py
backend/domain/: __init__.py  models.py
backend/hotpath/: __init__.py  dialogue.py  stt.py  tts.py  vad.py  ws_session.py
backend/persistence/: __init__.py  database.py  repositories.py
config/: settings.py
deploy/: deploy.sh  english-coach.service  nginx.conf
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend/src/app/plan/: page.tsx
frontend/src/app/practice/: page.tsx
frontend/src/app/progress/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/resources/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/dashboard/: QuickActions.tsx  SkillCard.tsx  (+3 more)
frontend/src/lib/: api.ts
references/: architecture.md  data-model.md  resource-governance.md  scoring.md
scripts/: benchmark_models.py  profile_hotpath.py  seed_user.py  setup_models.py  test_resource_guard.py
tests/: __init__.py  conftest.py  test_coldpath.py  test_persistence.py  test_resource_guard.py
(+3 files in other folders)
