[project]
name = "english-coach"
version = "0.1.0"
description = "Fully offline AI English Speaking & Listening Coach with 90% resource ceiling"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.0",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.24.0.43",
    "nvidia-ml-py>=13.610.43",
    "piper-tts>=1.4.2",
    "prometheus-client>=0.25.0",
    "psutil>=7.2.2",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
